--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 syllogos:
   name: Σύλλογος Εθελοντούμε
-  title: Σύλλογος Φίλων Παιδιών, Εφήβων, Ενηλίκων ΑμεΑ και όλων των παιδιών «Εθελοντούμε»'
+  title: Σύλλογος Φίλων Παιδιών, Εφήβων, Ενηλίκων ΑμεΑ και όλων των παιδιών «Εθελοντούμε»
   url: https://ethelontoume.gr
   image_url: https://ethelontoume.gr/img/logo.png
