--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,4 +2,4 @@ syllogos:
   name: Σύλλογος Εθελοντούμε
   title: Σύλλογος Φίλων Παιδιών, Εφήβων, Ενηλίκων ΑμεΑ και όλων των παιδιών «Εθελοντούμε»
   url: https://ethelontoume.gr
-  image_url: /img/logo.svg
+  image_url: /img/logo.png
