--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 syllogos:
   name: Σύλλογος Εθελοντούμε
-  title: Σύλλογος Φίλων Παιδιών, Εφήβων, Ενηλίκων ΑμεΑ και όλων των παιδιών «Εθελοντούμε»
+  title: Ν.Π.Ι.Δ. Μη Κερδοσκοπικό
   url: https://ethelontoume.gr
   image_url: /img/logo.png
