--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,4 +2,4 @@ syllogos:
   name: Σύλλογος Εθελοντούμε
   title: Ν.Π.Ι.Δ. Μη Κερδοσκοπικό
   url: https://ethelontoume.gr
-  image_url: /img/logo.png
+  image_url: /img/logo.jpg
